  UserException removed, RuntimeException used throughout instead
  ValidationException added, thrown by EntityModel.validateData() and EntityPanel.validateData()
  UiUtil.DefaultExceptionHandler.handleException() now unwraps RuntimeExceptions
  PropertyFilterPanel refactored
  Configuration.getDefaultDateFormat() and getDefaultTimestampFormat() added
  EntityTableModel now performs the query on refresh before clearing the model
  FormattedTextPropertyLink refactored out of TextPropertyLink
  DatePropertyLink now extends FormattedTextPropertyLink
  EntityUiUtil.createTextField() refactored
  Property.isNullable field added
  EntityEditModel.isValid() default implementation uses the above
  TextPropertyLink.addValidator() added
  FormattedTextPropertyLink overrides the above and does its thing
  Configuration.INVALID_VALUE_BACKGROUND_COLOR added
  Property.description field added
  EntityRepository.set/getPropertyDescription() removed
  FormattedTextBeanPropertyLink refactored out of TextBeanPropertyLink
  AbstractPropertyLink, removed name parameter
  PropertySearchPanel refactored
  AbstractSearchPanel.getInputFormat() added
  Type.Boolean enum removed, good riddance
  BooleanComboBoxModel refactored and moved to common.model.combobox
  EntityModel.getDetailModel(String entityID) added
  EntityTestUnit.getDbConnectionProvider() renamed to getDbProvider()
  EntityKeyCriteria, removed the unused getKeys() and getProperties() methods
  Methods returning Collection fields now return a new Collection, preventing modification to the field contents
  EntityRepository.EntityDefinition moved up to framework.domain
  EntityDefinition refactored, added chained setters
  EntityRepository.define(EntityDefinition) added, rest deprecated
  EntityRepository.define(EntityDefinition) renamed to add
  EntityRepository.define() removed, wohooo
  Entity.isValueNull() needs to handle Entity.Key values as well for Type.ENTITY
  Property fields privatized, getters added