@@ -833,3 +833,4 @@
   EntityRepository.define() removed, wohooo
   Entity.isValueNull() needs to handle Entity.Key values as well for Type.ENTITY
   Property fields privatized, getters added
+  Property.selectOnly field renamed to readOnly
